# fork-chat

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile
docs/case-studies/: database-tree-design.md  local-single-origin-deploy.md  multi-protocol-llm-compat.md  streaming-sse-architecture.md  tool-use-permissions.md
docs/superpowers/plans/: 2026-05-03-batch-delete-sessions.md
docs/superpowers/specs/: 2026-05-03-batch-delete-sessions-design.md
fork-chat-backend/: .env.example  Cargo.toml  config.example.json  docker-compose.yml  justfile
fork-chat-backend/migrations/: 20260421150559_init.sql
fork-chat-backend/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  tooling.rs  turn_lifecycle.rs  turn_runtime.rs  turn_stream.rs  turn_task_manager.rs
fork-chat-backend/src/db/: mod.rs  pool.rs  sessions.rs  turns.rs
fork-chat-backend/src/handlers/: config.rs  health.rs  mod.rs  sessions.rs  turns.rs
fork-chat-backend/src/llm/: mod.rs
fork-chat-backend/src/llm/anthropic/: adapter.rs  client.rs  message_builder.rs  mod.rs  types.rs
fork-chat-backend/src/llm/openai/: adapter.rs  message_builder.rs  mod.rs
fork-chat-backend/src/models/: mod.rs  session.rs  turn.rs
fork-chat-backend/src/openai/: adapter.rs  message_builder.rs  mod.rs
fork-chat-backend/tests/: anthropic_message_builder.rs  anthropic_test.rs  batch_delete.rs  config_endpoint.rs  healthz.rs  integration_test.rs  message_builder.rs  openai_test.rs  sessions.rs  tree_and_turn.rs  turns.rs
fork-chat-backend/tests/common/: mod.rs
fork-chat-frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
fork-chat-frontend/src/: index.scss  main.tsx  tailwind.css
fork-chat-frontend/src/api/: client.test.ts  client.ts  turnStream.ts  types.ts
fork-chat-frontend/src/components/: MessageInput.browser.test.tsx  MessageInput.tsx  MessageView.browser.test.tsx  MessageView.tsx  TurnDetailModal.browser.test.tsx  TurnDetailModal.tsx  TurnErrorDetails.tsx  index.ts
fork-chat-frontend/src/hooks/: useTurnStream.ts
fork-chat-frontend/src/lib/: utils.test.ts
fork-chat-frontend/src/pages/: ChatPage.browser.test.tsx  ChatPage.tsx
fork-chat-frontend/src/routes/: -__root.test.tsx  __root.tsx  index.tsx  sessions.$sessionId.tsx
fork-chat-frontend/src/store/: chatStore.test.ts  chatStore.ts
fork-chat-frontend/src/test/: fixtures.ts  setup.ts  (+3 more)
specs/: init.md  multi-protocol.md  tool-use.md
(+11 files in other folders)
