[package]
name = "fork-chat-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

async-openai = { version = "0.35.0", features = ["responses"] }
async-trait = "0.1.83"
backoff = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-stream = "0.3"
futures-core = "0.3"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

eyre = "0.6.12"
thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

dotenvy = "0.15.7"
config = { version = "0.15", default-features = false, features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
# `watchdog` makes testcontainers tear down running containers on SIGINT/SIGTERM
# (e.g. Ctrl-C during `cargo test`) instead of leaking them.
testcontainers = { version = "0.24", features = ["watchdog"] }
testcontainers-modules = { version = "0.12", features = ["postgres"] }
tower = "0.5"
tower-service = "0.3"
